--- a/Watch/Info.plist
+++ b/Watch/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>AppInMed.$(PRODUCT_NAME:rfc1034identifier)</string>
+	<string>com.fritzdorfsport.purchase</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
